[gd_scene load_steps=16 format=3 uid="uid://g7xoeltvtmr6"]

[ext_resource type="PackedScene" uid="uid://chg43aqlcpl6q" path="res://scenes/player.tscn" id="1_rwgxs"]
[ext_resource type="PackedScene" uid="uid://55qmimsyggod" path="res://scenes/crop.tscn" id="2_4wyf3"]
[ext_resource type="Script" uid="uid://cwqc1rt8ywc8q" path="res://scripts/drop_zone.gd" id="3_4wyf3"]
[ext_resource type="Script" uid="uid://l316c8vtv74n" path="res://scripts/score_manager.gd" id="4_k0juu"]
[ext_resource type="LabelSettings" uid="uid://bip4slgfeqy4f" path="res://resources/score_label.tres" id="5_71j4m"]
[ext_resource type="Script" uid="uid://cb8631idmsqla" path="res://scripts/hud.gd" id="5_qfnet"]
[ext_resource type="Script" uid="uid://ck1lwp0q61jmn" path="res://scripts/rock_spawner.gd" id="7_i7141"]
[ext_resource type="PackedScene" uid="uid://b7xkansct4b1m" path="res://scenes/rock.tscn" id="8_4mrxx"]
[ext_resource type="MeshLibrary" uid="uid://dsjrydr5inikm" path="res://resources/tiles.tres" id="9_7r4gi"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fj7yv"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_tlwt5"]
sky_material = SubResource("ProceduralSkyMaterial_fj7yv")

[sub_resource type="Environment" id="Environment_aqk2v"]
background_mode = 2
sky = SubResource("Sky_tlwt5")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_rwgxs"]
size = Vector3(4.1228, 0.208984, 3.78418)

[sub_resource type="BoxMesh" id="BoxMesh_4wyf3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k0juu"]
albedo_color = Color(0.73953, 0.81, 0.1053, 1)

[node name="World" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_aqk2v")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(45.397, 1, 32.203)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.215264, 0.976556, 0, -0.976556, 0.215264, 0, 15.0307, 5.48931)
current = true

[node name="Player" parent="." instance=ExtResource("1_rwgxs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.33418, 0, 0)

[node name="Player2" parent="." instance=ExtResource("1_rwgxs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.137, 0, 0)
player_id = 2

[node name="Crop" parent="." groups=["crops"] instance=ExtResource("2_4wyf3")]
transform = Transform3D(0.885531, -0.464579, 0, 0.437821, 0.834527, -0.334481, 0.155393, 0.296194, 0.942402, 0, 1.41864, 3.7969)

[node name="Crop2" parent="." groups=["crops"] instance=ExtResource("2_4wyf3")]
transform = Transform3D(0.988218, 0.149444, -0.0330489, -0.153055, 0.964905, -0.213384, 0, 0.215928, 0.976409, -5.6487, 1.49735, -3.06561)

[node name="Crop3" parent="." groups=["crops"] instance=ExtResource("2_4wyf3")]
transform = Transform3D(0.948766, -0.31598, 0, 0.298368, 0.895883, 0.329196, -0.10402, -0.31233, 0.944261, -1.76767, 1.89951, 5.59519)

[node name="DropZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.31581)
script = ExtResource("3_4wyf3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DropZone"]
shape = SubResource("BoxShape3D_rwgxs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="DropZone"]
transform = Transform3D(4.1, 0, 0, 0, 1, 0, 0, 0, 4.1, 0, -0.420934, 0)
mesh = SubResource("BoxMesh_4wyf3")
surface_material_override/0 = SubResource("StandardMaterial3D_k0juu")

[node name="ScoreManager" type="Node" parent="."]
script = ExtResource("4_k0juu")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("5_qfnet")

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 31.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_constants/separation = 225
alignment = 1

[node name="Player1Score" type="Label" parent="HUD/HBoxContainer"]
layout_mode = 2
text = "Player 1: 0"
label_settings = ExtResource("5_71j4m")

[node name="Timer" type="Label" parent="HUD/HBoxContainer"]
layout_mode = 2
text = "120"
label_settings = ExtResource("5_71j4m")

[node name="Player2Score" type="Label" parent="HUD/HBoxContainer"]
layout_mode = 2
text = "Player 2: 0"
label_settings = ExtResource("5_71j4m")

[node name="CountdownTimer" type="Timer" parent="HUD"]
autostart = true

[node name="RockSpawner" type="Node3D" parent="."]
script = ExtResource("7_i7141")
rock_scene = ExtResource("8_4mrxx")

[node name="RockTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Rock" parent="." instance=ExtResource("8_4mrxx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.18096, 0.749055, -1.22845)

[node name="Rock2" parent="." instance=ExtResource("8_4mrxx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.43851, 0.749055, 1.50229)

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("9_7r4gi")
cell_size = Vector3(1, 2, 1)
metadata/_editor_floor_ = Vector3(0, -1, 0)

[connection signal="crop_delivered" from="DropZone" to="ScoreManager" method="_on_drop_zone_crop_delivered"]
[connection signal="time_up" from="HUD" to="ScoreManager" method="_on_hud_time_up"]
[connection signal="timeout" from="RockTimer" to="RockSpawner" method="_on_rock_timer_timeout"]
